--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <div class="container" id="form">
         <div class="row">
             <div class="form-group col-md-4" id="instructions">
-                <!-- <label for="search">Add a show</label> -->
                 <input class="form-control" id="search" type="text" placeholder="Add A TV Show">
                 <button type="submit" class="btn btn-primary" id="find-show">Submit</button>
+                <!-- <button type="submit" class="btn btn-primary" id="clearFavs">Clear Favorites</button> -->
             </div>
             <div class="col-md-8" id="instructions">
                 <h5>Click a button above to search GIFs. Once the images display, click the image to animate!
